fix chart, add function show hide navbar on mobile

--- a/login.css
+++ b/login.css
@@ -51,7 +51,9 @@ body {
     align-items: center;
 }
 
-.login-box .submit-box button {
+.login-box .submit-box button,
+.search .search-btn,
+.add-btn {
     color: #ffffff;
     background-color: #F28E19;
     display: block;
@@ -78,10 +80,12 @@ body {
 /* Navbar */
 
 .navbar-left {
-    width: 20%;
-    height: 100vh;
+    /* width: 20%; */
+    min-width: 245px;
+    min-height: 100vh;
     box-shadow: 2px 2px 9px 0px rgb(0 0 0 / 19%);
     z-index: 1;
+    transition: 0.4s;
 }
 
 .navbar-left div {
@@ -93,23 +97,31 @@ body {
 }
 
 .navbar-left div p {
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .navbar-left div svg {
-    width: 2.5em;
-    height: 2.5em;
+    width: 30px;
+    height: 25px;
     margin-right: 10px;
 }
 
 .navbar-left ul {}
 
-.navbar-left ul li {
+.navbar-left ul li button {
+    width: 100%;
     display: flex;
-    justify-content: flex-start;
     align-items: center;
+    padding: 10px 20px;
     font-weight: 300;
-    padding: 10px 15px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #fff;
+}
+
+.navbar-left ul li button.active {
+    color: #26ace5;
+    font-weight: 500;
 }
 
 .navbar-left ul li svg {
@@ -123,6 +135,22 @@ body {
 header {
     height: 60px;
     background-color: #ffffff;
+}
+
+header .menu {
+    display: none;
+}
+
+header .menu button {
+    width: 100px;
+    height: 60px;
+    background-color: rgb(245, 245, 245);
+}
+
+header .menu button svg {
+    width: 35px;
+    height: 60px;
+    margin-left: -40%;
 }
 
 header .profile {
@@ -144,19 +172,249 @@ header .profile p {
 
 /* Content */
 .right-content {
-    width: 80%;
+    width: calc(100vw - 245px);
     background: #F5F5F5;
 }
 
 .right-content .content {
-    padding: 90px 10em;
+    padding: 90px 10%;
+}
+
+/* Chart */
+.chart-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+.chart-box {
+    
+}
+
+.add-device {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.chart-child {
+    width: 48%;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 2px 2px 9px 0px rgb(0 0 0 / 19%);
+    text-align: center;
+    padding: 30px 15px;
+    
+}
+
+.chart-child input {
+    height: 36px;
+    padding: 10px;
+    background: #EAE1E1;
+    border: none;
+    outline: none;
+    width: 90%;
+    margin: 0 !important;
+    margin-bottom: 20px !important;
+    box-shadow: 2px 2px 0px 0px rgb(0 0 0 / 15%);
+}
+
+/* search box */
+.search-box {
+    display: flex;
+    justify-content: space-between;
+}
+
+.search-box h3 {}
+
+.search-box .search {
+    display: flex;
+    align-items: center;
+}
+
+.search-box .search input,
+.add-device input {
+    /* width: 20%; */
+    margin-right: 15px;
+    height: 36px;
+    padding: 10px;
+    background: #EAE1E1;
+    border: none;
+    outline: none;
+}
+
+.search-box .search input::placeholder {
+    color: #ccc;
+}
+
+.search-box .search button {
+    padding: 0.7em 1.2em;
 }
 
 /* Overview Table */
-.overview-table {
+.table {
     width: 100%;
+    background: #fff;
+    box-shadow: 2px 2px 9px 0px rgb(0 0 0 / 19%);
+    border-radius: 5px;
+    border-collapse: collapse;
 }
-.overview-table th, td {
+
+.table th,
+td {
     font-weight: 300;
     text-align: right;
+    padding: 8px;
+    padding: 20px;
+}
+
+.table tr {
+    border-bottom: 1px solid #00000030;
+}
+
+.table thead tr {
+    border-bottom: 1px solid #000;
+}
+
+.table tr td:first-child {
+    text-align: left;
+}
+
+.table tr:last-child td {
+    font-weight: 500;
+}
+
+/* paginate button */
+#pagination-buttons {
+    text-align: center;
+    margin-top: 20px;
+}
+
+#pagination-buttons .pagination-btn {
+    width: 45px;
+    margin: 0 5px;
+    border-radius: 50px;
+    height: 45px;
+    background: #007bff;
+    color: #fff;
+    font-size: 20px;
+}
+
+#pagination-buttons .pagination-btn.active {
+    color: #007bff;
+    border: 3px solid #007bff;
+    background: #fff;
+}
+
+/* responsive */
+@media (max-width: 414px) {
+    .right-content .content {
+        padding: 0 10%;
+    }
+
+    .table {
+        display: none;
+    }
+
+    .chart-container {
+        display: block;
+    }
+
+    #myChart {
+        max-width: 100% !important;
+    }
+
+    .chart-child {
+        width: 100%;
+    }
+}
+
+@media (min-width: 415px) and (max-width: 1366px) {
+    .chart-container {
+        display: block;
+    }
+
+    #myChart {
+        max-width: 100% !important;
+    }
+
+    .chart-child {
+        width: 100%;
+        margin: 0 auto;
+        margin-top: 30px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .right-content .content {
+        padding: 60px 10%;
+    }
+
+    .navbar-left {
+        position: absolute;
+        background: #fff;
+        left: -245px;
+        opacity: 0;
+    }
+
+    .close-btn {
+        position: absolute;
+        left: 245px;
+    }
+
+    .right-content {
+        width: 100%;
+    }
+
+    header {
+        background-color: rgb(245, 245, 245);
+    }
+
+    .menu {
+        display: block !important;
+    }
+
+    .profile {
+        display: none !important;
+    }
+}
+
+@media (max-width: 768px) {
+    .table {
+        width: 100%;
+        height: auto;
+        font-size: 0.8em;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 720px) {
+    .right-content .content {
+        padding: 30px 10%;
+    }
+
+    .table {
+        width: 100%;
+        height: auto;
+        font-size: 0.7em;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 600px) {
+    .table {
+        width: 100%;
+        height: auto;
+        font-size: 0.6em;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 500px) {
+    .table {
+        width: 100%;
+        height: auto;
+        font-size: 0.4em;
+        margin: 0 auto;
+    }
 }
